Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30154

Renaming Symbol(class type) misses include files in cpp file.

XMLWordPrintable

    • 69571427a (master)

      Qt user reported following:
      "
      Renaming a symbol with rename file works great:

      • class name changed
      • include guard changed
      • references in the class files AND other files changed
      • include files changed in OTHER files

      EXCEPT

      the include file in the class cpp file itself is NOT renamed.
      "

      Steps to reproduce:

      Create a new template project.

      Go to header file and hover over class "MainWindow" and select "Rename symbol under cursor".

      In the rename replace with add new name and select "Rename 2 files".

      Check the .cpp the includes have not been updated.

        For Gerrit Dashboard: QTCREATORBUG-30154
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            tero.pelkonen Tero Pelkonen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes